fogospt/resources/assets/sass/app.scss
/* ... */
.fa-map-marker g g path {
  stroke: black;
  stroke-width: 10;
}

#style-1::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  background-color: #F5F5F5;
}

#style-1::-webkit-scrollbar {
  width: 12px;
  background-color: #F5F5F5;
}

#style-1::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
  background-color: #555;
}

html, body {
  height: 100%;
  background-color: #f5f5f5;

  a {
    color: #ff512f !important;
  }
  a:hover {
    color: #f09819 !important;
  }
}

body {
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

header {
  height: 80px;
  .navbar {
    padding: 0rem 1rem;
    text-transform: uppercase;
    .navbar-nav {
      padding-top: 1rem;
    }
    .navbar-toggler {
      border: 0;
      &:focus {
        outline: none;
      }
      .navbar-toggler-icon {
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
      }
      &[aria-expanded=true] {
        & + .navbar-collapse {
          transform: translate3d(0, 0, 0);
        }
        .navbar-toggler-icon {
          background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M7.222,7.222 L22.778,22.778 M7.222,22.778 L22.778,7.222' /%3E%3C/svg%3E");
        }
      }
    }

    .navbar-collapse {
      position: fixed;
      right: 0;
      top: 80px;
      bottom: 0;
      width: 200px;
      background: #fff;
      transition: transform .3s !important;
      display: block;
      transform: translate3d(100%, 0, 0);
      overflow-y: scroll !important;
      max-height: calc(100vh - 80px);
      &.collapsing {
        height: auto !important;
      }
      a {
        color: #ff512f !important;
      }
      a:hover {
        color: #f09819 !important;
      }
    }
  }
  nav {
    background: -moz-linear-gradient(-45deg, #f09819 0%, #ff512f 100%);
    background: -webkit-linear-gradient(-45deg, #f09819 0%, #ff512f 100%);
    background: linear-gradient(135deg, #f09819 0%, #ff512f 100%);
  }
  .compare {
    font-size: .875rem;
    color: #fff;
    margin-top: .5rem;
    display: block;
    text-align: center
  }
  .form {
    margin-bottom: 1rem;
  }
  .select2-container--default {
    z-index: 1;
  }
}

.select2-container--default .select2-selection--single, .select2-dropdown {
  border: 0;
  border-radius: .25rem;
}

a {
  color: #33A1FD;
  img, svg {
    opacity: 1;
  }
  &:hover {
    img, svg {
      opacity: .75;
    }
  }
}

img, svg {
  max-width: 100%;
}

.loading {
  body {
    &:before, &:after {
      content: '';
      position: fixed;
      top: 50%;
      left: 50%;
      width: 3rem;
      height: 3rem;
      margin: -1.5rem 0 0 -1.5rem;
      border-radius: 50%;
      background: rgba(#000, .2);
      animation: loading 2.0s infinite ease-in-out;
    }
    &:after {
      animation-delay: -1.0s;
    }
  }
  main {
    opacity: .05;
  }
}
/* ... */

